fixed vw issue on mobile

--- a/styles/media.scss
+++ b/styles/media.scss
@@ -12,14 +12,14 @@
   //   font-size: 3rem;
   //   color: #fff;
   // }
-  
+
   // .section-title {
   //   color: #fff;
   //   font-size: 3rem;
   //   font-weight: 700;
   //   padding: 2rem 0;
   // }
-  
+
   // .subsection-title {
   //   font-weight: 700;
   //   font-size: 1.5rem;
@@ -36,14 +36,17 @@
     background: url("../assets/homepage_bg.jpg") no-repeat center top;
     background-size: cover;
 
-
     &__content {
       padding: 1rem;
     }
-    
+
     &__title {
       font-size: 3.6rem;
       line-height: 3rem;
+
+      @media screen and (max-width: 320px) {
+        font-size: 3.1rem;
+      }
     }
 
     &__description {
@@ -51,9 +54,9 @@
     }
 
     &__buttons {
-      button {
-        font-size: 1rem;
+      a {
         padding: 1rem;
+        font-size: 1rem;
       }
     }
   }
@@ -69,43 +72,47 @@
   }
 
   // About section styling
-.about {
-  grid-template-columns: 1fr;
+  .about {
+    grid-template-columns: 1fr;
 
-  &__block {
-    display: flex;
-    flex-direction: column;
+    &__text {
+      max-width: 100vw;
+    }
 
-    &--left {
-      .about{
-        &__picture {
-          background: url("../assets/store_pic.jpg") no-repeat center center/cover;
+    &__block {
+      display: flex;
+      flex-direction: column;
+
+      &--left {
+        .about {
+          &__picture {
+            background: url("../assets/store_pic.jpg") no-repeat center
+              center/cover;
+          }
+          &__text {
+          }
         }
-        &__text {
+      }
+
+      &--right {
+        flex-direction: column-reverse;
+        .about {
+          &__picture {
+            background: url("../assets/store_pic.jpg") no-repeat center
+              center/cover;
+          }
         }
       }
     }
-  
-    &--right {
-      flex-direction: column-reverse;
-      .about{
-        &__picture {
-          background: url("../assets/store_pic.jpg") no-repeat center center/cover;
-        }
-      }
-    }
-  }
 
     &__text {
       padding: 20px;
       text-align: left !important;
     }
-}
-  
+  }
 
   //   location styling
   #location {
-  
     .section__container {
       padding: 0;
     }
@@ -123,7 +130,6 @@
     }
 
     &__info {
-
       &__opening-hours {
         line-height: 1.2rem;
       }
@@ -138,6 +144,18 @@
   // Contacts styling
   .contacts {
     flex-direction: column;
+
+    .info__mail {
+      margin-top: 1rem;
+      
+      .email {
+        font-size: 1.6rem;
+
+        @media screen and (max-width: 320px) {
+          font-size: 1.3rem;
+        }
+      }
+    }
 
     &__block {
       padding: 60px 20px;
@@ -154,18 +172,18 @@
     }
 
     &__email {
-        grid-column-start: 1;
-        grid-column-end: 2;
+      grid-column-start: 1;
+      grid-column-end: 2;
     }
 
     &__phone {
-        grid-column-start: 1;
-        grid-column-end: 2;
+      grid-column-start: 1;
+      grid-column-end: 2;
     }
 
     &__message {
-        grid-column-start: 1;
-        grid-column-end: 2;
+      grid-column-start: 1;
+      grid-column-end: 2;
     }
   }
 }
